# rogue_test

./: .gitignore  CMakeLists.txt  MoveCommand.cpp  MoveCommand.h  README.md  main.cpp
ECS/: Command.cpp  Command.h  Property.h
cmake/: spdlog.cmake
src/: main.cpp
src/ECS/: CMakeLists.txt  Command.cpp  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.cpp  EventBus.cpp  EventListener.cpp  EventListener.h  Property.cpp  System.cpp  World.cpp
src/ECS/include/: Event.h  Property.h  System.h  World.h
src/commands/: MoveCommand.h
src/entities/: Mob.cpp  Mob.h  Player.cpp  Player.h
src/events/: PingEvent.h
src/game/: CMakeLists.txt  main.cpp
src/game/commands/: MoveCommand.cpp
src/game/entities/: Camera.cpp  Camera.h  Player.h  Wall.cpp  Wall.h
src/game/events/: InputEvent.h  MoveEvent.h  PlayerMoveEvent.h
src/game/properties/: CharTexture.h  Focus.h  PlayerControllable.h  Position.h  RigidBody.h
src/game/systems/: CameraSystem.cpp  CameraSystem.h  CursesRawInputSystem.cpp  CursesRawInputSystem.h  InputSystem.cpp  InputSystem.h  MoveSystem.cpp  MoveSystem.h  PingSystem.cpp  PingSystem.h  PlayerMoveSystem.cpp  PlayerMoveSystem.h  RenderSystem.cpp  RenderSystem.h
src/game/utils/: LogWrapper.cpp  LogWrapper.h  Vector2.cpp  Vector2.h  logging.h
src/lib/ECS/: CMakeLists.txt  Entity.cpp  EntityManager.cpp  EventBus.cpp  EventDelegate.cpp  EventListener.cpp  Property.cpp  System.cpp  World.cpp
src/lib/ECS/include/: BaseEventDelegate.h  Entity.h  EntityManager.h  EventBus.h  EventDelegate.h  EventListener.h  System.h  World.h
src/properties/: Position.h
src/systems/: PingSystem.cpp  PingSystem.h
